<resources>
    <string name="app_name">House Rental App</string>
    <string name="home_tv_welcome_msg">Welcome to House Rental App!</string>
    <string name="home_search_hint_str"><font size="14">Search with House Title</font></string>
    <string name="home_tv_hot_houses_title_str">Hot/Trending Houses</string>
    <string name="home_tv_district_title_str">District</string>
    <string name="home_tv_district_Location_str">Location</string>
    <string name="home_searchwithmap_str"><font size="12">Search With Google Map</font></string>
    <string name="home_search_str"><font size="12">Search</font></string>
    <string name="posting_uploadphoto_str"><font size="12">Upload Photo</font></string>
    <string name="posting_price_tv_str">Price:</string>
    <string name="posting_price_et_str">Price ($HKD)</string>
    <string name="posting_address_tv_str">Address:</string>
    <string name="posting_address_et_str">Address</string>
    <string name="posting_bedroom_tv_str">Number of Bedroom:</string>
    <string name="posting_bedroom_et_str">Number of Bedroom</string>
    <string name="posting_carspace_tv_str">Number of Car Space:</string>
    <string name="posting_carspace_et_str">Number of Car Space</string>
    <string name="posting_furnished_tv_str">Furnished?</string>
    <string name="posting_pet_tv_str">Pet Considered?</string>
    <string name="posting_housetype_tv_str">House Type:</string>
    <string name="posting_desc_tv_str">Description:</string>
    <string name="posting_desc_et_str">Description (50 Words Limit)</string>
    <string name="posting_visibility_tv_str">Visible to Public?</string>
    <string name="posting_publishing_time_tv_str">Publishing Time</string>
    <string name="posting_posting_tv_str"><font size="12">Posting</font></string>
    <string name="posting_district_tv_str">District</string>
    <string name="signup_upload_tv_str">Upload image</string>
    <string name="posting_title_tv_str">Title</string>
    <string name="detail_description_tv" />
    <string name="booking_title_tv_str">A Booking Request From Peter</string>
    <string name="booking_description_tv_str">Peter sent you a request to view your property - \"House 2\" at \"06/06/2023\" . You may contact him/her at \" 12344321\"".</string>
    <string name="notification_no_request_tv_str">No Booking/Request is found</string>
    <string name="booking_response_tv">Ben have accept</string>
    <string name="notification_request_btn_str">request</string>
    <string name="notification_response_btn_str">response</string>
</resources>